crates/parser/src/tests/snapshots/kclvm_parser__tests__expr__if_expr.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"1 if true else 2\"####)"
---
Node {
    node: If(
        IfExpr {
            body: Node {
                node: NumberLit(
                    NumberLit {
                        binary_suffix: None,
                        value: Int(
                            1,
                        ),
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            cond: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            Node {
                                node: "true",
                                filename: "",
                                line: 1,
                                column: 5,
                                end_line: 1,
                                end_column: 9,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 5,
                end_line: 1,
                end_column: 9,
            },
            orelse: Node {
                node: NumberLit(
                    NumberLit {
                        binary_suffix: None,
                        value: Int(
                            2,
                        ),
                    },
                ),
                filename: "",
                line: 1,
                column: 15,
                end_line: 1,
                end_column: 16,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 16,
}

