crates/parser/src/tests/snapshots/kclvm_parser__tests__expr__unary_expr.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"+1\"####)"
---
Node {
    node: Unary(
        UnaryExpr {
            op: UAdd,
            operand: Node {
                node: NumberLit(
                    NumberLit {
                        binary_suffix: None,
                        value: Int(
                            1,
                        ),
                    },
                ),
                filename: "",
                line: 1,
                column: 1,
                end_line: 1,
                end_column: 2,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}

